[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-tidb"
authors = [
  { name="Xiang Zhang", email="zhangxiang02@pingcap.com" },
  { name="Di Wang", email="wangdi@pingcap.com" }
]
description = "Django backend for TiDB"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/pingcap/tidb"
"Bug Reports" = "https://github.com/pingcap/django-tidb/issues"
"Source" = "https://github.com/pingcap/django-tidb"

[project.optional-dependencies]
vector = ["numpy~=1.0"]

[tool.setuptools]
packages = ["django_tidb", "django_tidb.fields"]

[tool.setuptools.dynamic]
version = {attr = "django_tidb.__version__"}